# SparseVoxelOctree

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build-shaders.ps1  todo.md
assets/SPIRV/: debug.frag.spv  debug.vert.spv  instanced-voxel.frag.spv  instanced-voxel.vert.spv  mesh.frag.spv  mesh.vert.spv  raycast.comp.glsl  raycast.comp.spv  raycast.frag.glsl  raycast.frag.spv  raycast.vert.glsl  raycast.vert.spv
assets/shaders/: debug.frag  debug.geom  debug.vert  fullscreen.frag  fullscreen.vert  instanced.frag  raycast.frag  raycast.vert
shaders/: CMakeLists.txt  clear3d-texture.comp.glsl  debug.frag.glsl  debug.vert.glsl  globaldata.glsl  instanced-voxel.frag.glsl  instanced-voxel.vert.glsl  material.glsl  math.glsl  mesh.frag.glsl  mesh.vert.glsl  meshdata.glsl  octree-allocate-node.comp.glsl  octree-flag-node.comp.glsl  octree-init-node.comp.glsl  octree-raycast.frag.glsl  octree-tag-node.comp.glsl  octree.glsl  raycast-def.glsl  raycast-grid.frag.glsl  raycast-grid.vert.glsl  raycast.comp.glsl  raycast.glsl  stack.glsl  terrain-voxelizer-prepass.comp.glsl  terrain.glsl  voxelizer-prepass.frag.glsl  voxelizer-prepass.geom.glsl  voxelizer-prepass.vert.glsl  voxelizer.frag.glsl  voxelizer.geom.glsl  voxelizer.glsl  voxelizer.vert.glsl
shaders/octree/: octree-allocate-node.comp.glsl  octree-init-node.comp.glsl  octree-raycast.frag.glsl  octree-update-params.comp.glsl  octree.glsl
shaders/voxelizer/: noise2D.glsl  terrain-voxelizer.comp.glsl  terrain.glsl  voxelizer-prepass.geom.glsl  voxelizer-prepass.vert.glsl  voxelizer.frag.glsl  voxelizer.geom.glsl  voxelizer.glsl  voxelizer.vert.glsl
src/: app-window.h  input.cpp  input.h  main.cpp  math-utils.h  pch.h  utils.cpp  utils.h  voxel-app.cpp  voxel-app.h  vulkan.h
src/core/: bitfield.h  resource-pool.h  resource.h  thread-safe-queue.h  thread-safe-vector.h
src/gfx/: async-loader.cpp  async-loader.h  camera.cpp  camera.h  debug.cpp  debug.h  geometry.cpp  geometry.h  gltf-loader.cpp  gltf-loader.h  gltf-scene.cpp  gltf-scene.h  gpu-timer.cpp  gpu-timer.h  imgui-service.cpp  imgui-service.h  mesh.cpp  mesh.h  opengl.cpp  opengl.h  render-scene.h  scene.cpp  scene.h
src/loaders/: gltf-loader.cpp  gltf-loader.h
src/rendering/: rendering-device.h  rendering-utils.cpp  rendering-utils.h  scene.h  vulkan-device.cpp  vulkan-device.h  vulkan-rendering-device.cpp  vulkan-rendering-device.h
src/sparse-octree/: cpu-octree-utils.cpp  cpu-octree-utils.h  octree-builder.cpp  octree-builder.h  octree-tracer.cpp  octree-tracer.h  voxel-renderer.cpp  voxel-renderer.h  voxelizer.cpp  voxelizer.h
src/sparse-octree/cpu/: cpu-octree-builder.cpp  cpu-octree-builder.h
src/ui/: imgui-service.cpp  win32-ui.cpp  win32-ui.h
src/voxelizer/: scene-voxelizer.cpp  scene-voxelizer.h  terrain-voxelizer.cpp  terrain-voxelizer.h  voxelizer.h
src/voxels/: density-generator.h  octree-def.h  octree-rasterizer.cpp  octree-rasterizer.h  octree-raycaster.cpp  octree-raycaster.h  octree-renderer.cpp  octree-renderer.h  octree.cpp  octree.h  parallel-octree.cpp  parallel-octree.h  perlin-voxdata.h  voxel-data.cpp  voxel-data.h
